Fixed menu on mobile chrome???

--- a/web/style.css
+++ b/web/style.css
@@ -77,7 +77,6 @@ main {
 }
 
 .param-list-wrapper {
-    visibility: inherit;
     position: absolute;
     top: 2em;
     width: 100vw;
